REFACTORING: mirrored featurewise option struct folder structure to pairwise structure; featurewise structs are in optionstructs_ifdeftoif/featurewise/generated

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ th3_featurewise.txt
 th3_pairwise.txt
 *.db
 *_performance_*.c
+*_performance.c
+*_ifdeftoif.c
 sqlite3_fixed.tunit
 sqlite3_fixed.pc
 sqlite3_fixed.pi
